Fixing white space issue

--- a/main.css
+++ b/main.css
@@ -142,7 +142,7 @@ svg {
 .text-body p {
     margin: 0 10% 20 15%;
     font-family: "Lato", sans-serif;
-    white-space: pre;
+    white-space: pre-line;
 }
 
 .downloadLink {
